feat: Enable basic authentication for REST API backed by a k8s secret

--- a/stackgres-k8s/src/operator/src/test/resources/application.properties
+++ b/stackgres-k8s/src/operator/src/test/resources/application.properties
@@ -15,3 +15,4 @@ stackgres.prometheus.allowAutobind=true
 stackgres.prometheus.grafanaEmbedded=false
 stackgres.documentation.uri=https://stackgres.io/doc/
 stackgres.documentation.errorsPath=/07-developer-documentation/01-error-types#
+stackgres.authentication.secretName=stackgres-operator
