--- a/stackgres-k8s/install/helm/stackgres-operator/templates/create-certificate-job.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/create-certificate-job.yaml
@@ -79,6 +79,12 @@ spec:
             KEY="$(cat /tmp/root.key | base64 | tr -d '\n')"
             CRT="$(kubectl get csr '{{ .Release.Name }}' -o jsonpath='{.status.certificate}')"
             
+            if [ -z "$CRT" ]
+            then
+              echo "Certificate not found in CSR!"
+              exit 1
+            fi
+            
             kubectl patch validatingwebhookconfiguration \
               -n '{{ .Release.Namespace }}' '{{ .Release.Name }}' --type json --patch '[
                 {"op":"replace","path":"/webhooks/0/clientConfig/caBundle","value":"'"$CRT"'"},
@@ -96,16 +102,10 @@ spec:
                 {"op":"replace","path":"/webhooks/3/clientConfig/caBundle","value":"'"$CRT"'"},
                 {"op":"replace","path":"/webhooks/4/clientConfig/caBundle","value":"'"$CRT"'"},
                 {"op":"replace","path":"/webhooks/5/clientConfig/caBundle","value":"'"$CRT"'"}]'
-            cat << EOF | kubectl create -f -
-            apiVersion: v1
-            kind: Secret
-            metadata:
-              name: {{ .Release.Name }}-certs
-              namespace: {{ .Release.Namespace }}
-            data:
-              root.key: "$KEY"
-              server.crt: "$CRT"
-            EOF
-            
+            kubectl patch secret \
+              -n '{{ .Release.Namespace }}' '{{ .Release.Name }}-certs' --type json --patch '[
+                {"op":"replace","path":"/data/root.key","value":"'"$KEY"'"},
+                {"op":"replace","path":"/data/server.crt","value":"'"$CRT"'"}]'
+            kubectl delete pod -n '{{ .Release.Namespace }}' -l app=stackgres-operator
       restartPolicy: OnFailure
 {{ end }}
