fix: e2e test failures

--- a/stackgres-k8s/install/helm/stackgres-cluster/templates/backupconfig-cr.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/templates/backupconfig-cr.yaml
@@ -118,7 +118,7 @@ spec:
             key: "{{ .Values.config.backup.gcs.serviceAccountJsonKey.key }}"
     {{- end }}
     {{- if .Values.config.backup.azureblob }}
-    type: azureblob
+    type: azureBlob
     azureBlob:
       bucket: "{{ .Values.config.backup.azureblob.bucket }}"
       {{- if .Values.config.backup.azureblob.path }}
