--- a/stackgres-k8s/install/helm/stackgres-operator/crds/SGPostgresConfig.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/crds/SGPostgresConfig.yaml
@@ -3,7 +3,7 @@ kind: CustomResourceDefinition
 metadata:
   name: sgpgconfigs.stackgres.io
 spec:
-  group:  stackgres.io
+  group: stackgres.io
   versions:
     - name: v1beta1
       served: true
@@ -19,16 +19,43 @@ spec:
   validation:
     openAPIV3Schema:
       type: object
-      required: ["spec"]
-      description: "Params for PostgreSQL configuration"
+      required: ["metadata", "spec"]
       properties:
+        metadata:
+          type: object
+          properties:
+            name:
+              type: string
+              description: |
+                The name of this Postgres Configuration. This Postgres configuration may be referenced by zero or more
+                SGClusters, and if so it would be referenced by this name. Following
+                [Kubernetes naming conventions](https://github.com/kubernetes/community/blob/master/contributors/design-proposals/architecture/identifiers.md),
+                it must be an rfc1035/rfc1123 subdomain, that is, up to 253 characters consisting of one or more
+                lowercase labels separated by `.`. Where each label is an alphanumeric (a-z, and 0-9) string, with a
+                maximum length of 63 characters, with the `-` character allowed anywhere except the first or last
+                character.
+
+                This name needs to be unique across all Postgres configurations in the same namespace.
         spec:
           type: object
           properties:
             postgresVersion:
               type: string
-              description: "PostgreSQL configuration version"
+              description: |
+                The **major** Postgres version this configuration is for. Postgres major versions contain one number
+                starting with version 10 (`10`, `11`, `12`, etc), and two numbers separated by a dot for previous
+                versions (`9.6`, `9.5`, etc).
+
+                Note that Postgres maintains full compatibility across minor versions, and hence a configuration for
+                a given major version will work for any minor version of that same major version.
+
+                Check [StackGres component versions](https://stackgres.io/doc/latest/01-introduction/06-versions/) to
+                see the Postgres versions supported by this version of StackGres.
             postgresql.conf:
               type: object
-              description: "List of PostgreSQL configuration parameters with their values"
-          required: ["postgresVersion","postgresql.conf"]
+              description: |
+                The `postgresql.conf` parameters that this configuration contains. They are represented as an object,
+                where the keys are valid names for the `postgresql.conf` configuration file parameters of the given
+                `postgresVersion`. You may check [postgresqlco.nf](https://postgresqlco.nf) as a reference on how to
+                tune and find the valid parameters for a given major version.
+          required: ["postgresVersion", "postgresql.conf"]
