refactor: renamed nonProduction to nonProductionOptions #175

--- a/stackgres-k8s/e2e/spec/default.values.yaml
+++ b/stackgres-k8s/e2e/spec/default.values.yaml
@@ -14,5 +14,5 @@ cluster:
 sidecar:
   prometheus:
     allowAutobind: false
-nonProduction:
+nonProductionOptions:
   disableClusterPodAntiAffinity: true
