--- a/stackgres-k8s/e2e/spec/disable-anti-affinity.values.yaml
+++ b/stackgres-k8s/e2e/spec/disable-anti-affinity.values.yaml
@@ -12,5 +12,5 @@ cluster:
 sidecar:
   prometheus:
     allowAutobind: false
-nonProduction:
+nonProductionOptions:
   disableClusterPodAntiAffinity: true
