--- a/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
@@ -112,5 +112,5 @@ minio:
       purge: true
 
 #You should only set following options for non production environment
-nonProduction:
+nonProductionOptions:
   disableClusterPodAntiAffinity: true
