--- a/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
@@ -43,7 +43,7 @@ config:
     #    key: secretkey
     #  region: k8s
     #  endpoint: minio.stackgres.svc
-    #  forcePathStyle: true
+    #  enablePathStyleAddressing: true
     #  storageClass:
     gcs: {}
     #  prefix: gcs://stackgres
