--- a/stackgres-k8s/src/operator/src/main/resources/backup-default-values.properties
+++ b/stackgres-k8s/src/operator/src/main/resources/backup-default-values.properties
@@ -10,7 +10,7 @@ storage.s3Compatible.awsCredentials.secretKeySelectors.accessKeyId.name=minio
 storage.s3Compatible.awsCredentials.secretKeySelectors.secretAccessKey.key=secretkey
 storage.s3Compatible.awsCredentials.secretKeySelectors.secretAccessKey.name=minio
 storage.s3Compatible.endpoint=http://minio:9000
-storage.s3Compatible.forcePathStyle=true
+storage.s3Compatible.enablePathStyleAddressing=true
 storage.s3Compatible.bucket=stackgres
 storage.s3Compatible.region=k8s
 
