refactor: s/pending/running/g for backup status

--- a/stackgres-k8s/install/helm/stackgres-operator/crds/SGBackup.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/crds/SGBackup.yaml
@@ -41,7 +41,7 @@ spec:
               properties:
                 status:
                   type: string
-                  enum: ["Pending", "Completed", "Failed"]
+                  enum: ["Running", "Completed", "Failed"]
                   description: "The phase of the backup."
                 failure:
                   type: string
