--- a/stackgres-k8s/install/helm/stackgres-operator/crds/SGBackup.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/crds/SGBackup.yaml
@@ -130,11 +130,11 @@ spec:
                       properties:
                         bucket:
                           type: string
-                          pattern: "((s3|https?)://)?[^/]+(/[^/]*)*$"
+                          pattern: "^[^/]+(/[^/]*)*$"
                           description: "The AWS S3 bucket (eg. bucket)."
                         path:
                           type: string
-                          pattern: "(/[^/]*)*$"
+                          pattern: "^(/[^/]*)*$"
                           description: "The AWS S3 path (eg. /path/to/folder)."
                         awsCredentials:
                           type: object
@@ -180,11 +180,11 @@ spec:
                       properties:
                         bucket:
                           type: string
-                          pattern: "((s3|https?)://)?[^/]+(/[^/]*)*$"
+                          pattern: "^[^/]+(/[^/]*)*$"
                           description: "The AWS S3 bucket (eg. bucket)."
                         path:
                           type: string
-                          pattern: "(/[^/]*)*$"
+                          pattern: "^(/[^/]*)*$"
                           description: "The AWS S3 path (eg. /path/to/folder)."
                         awsCredentials:
                           type: object
@@ -237,7 +237,7 @@ spec:
                         bucket:
                           type: string
                           description: "Specify bucket where to store backups (eg. x4m-test-bucket)."
-                          pattern: "^(gs://)?[^/]+(/[^/]*)*$"
+                          pattern: "^[^/]+(/[^/]*)*$"
                         path:
                           type: string
                           description: "Specify path in the bucket where to store backups (eg. /walg-folder)."
@@ -270,7 +270,7 @@ spec:
                         bucket:
                           type: string
                           description: "Specify the bucket where to store backups in Azure storage (eg. test-container)."
-                          pattern: "^(azure://)?[^/]+(/[^/]*)*$"
+                          pattern: "^[^/]+(/[^/]*)*$"
                         path:
                           type: string
                           description: "Specify path in the bucket where to store backups in Azure storage (eg. /walg-folder)."
