--- a/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
@@ -26,7 +26,8 @@ config:
     #networkRateLimit:
     #diskRateLimit:
     s3: {}
-    #  prefix: s3://stackgres
+    #  bucket: stackgres
+    #  path: /mypath
     #  accessKey:
     #    name: awscredentials
     #    key: accesskey
@@ -34,7 +35,8 @@ config:
     #    name: awscredentials
     #    key: secretkey
     s3Compatible: {}
-    #  prefix: s3://stackgres
+    #  bucket: stackgres
+    #  path: /mypath
     #  accessKey:
     #    name: minio
     #    key: accesskey
@@ -46,12 +48,14 @@ config:
     #  enablePathStyleAddressing: true
     #  storageClass:
     gcs: {}
-    #  prefix: gcs://stackgres
+    #  bucket: stackgres
+    #  path: /mypath
     #  serviceAccountJsonKey:
     #    name: gcscredentials
     #    key: key
     azureblob: {}
-    #  prefix: azure://stackgres
+    #  bucket: stackgres
+    #  path: /mypath
     #  account:
     #    name: azureblobcredentials
     #    key: account
