--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,6 @@ pom.xml.tag
 # End of https://www.gitignore.io/api/java,eclipse,java-web,code-java
 **/helm/*/charts/*.tgz
 **/helm/*/requirements.lock
+
+doc/public
+doc/data
